fix bug and finalize the website
