# docs/swagger.json
@@ -59,6 +59,55 @@
                 }
             }
         },
+        "/amg/v1/auth/logout": {
+            "post": {
+                "description": "Clear the session token cookie",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Logout user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "objects"
+                        }
+                    }
+                }
+            }
+        },
+        "/amg/v1/auth/me": {
+            "get": {
+                "description": "Get user info from session token cookie",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Get current logged-in user's info",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/amg/v1/auth/register": {
             "post": {
                 "description": "Register a new user",
@@ -231,7 +280,7 @@
                 "tags": [
                     "candidate"
                 ],
-                "summary": "Get all candidates",
+                "summary": "Get all candidate",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -483,7 +532,7 @@
         },
         "/amg/v1/comments/create-comment": {
             "post": {
-                "description": "Tạo một comment mới cho một bài viết",
+                "description": "Create a new comment for a post",
                 "consumes": [
                     "application/json"
                 ],
@@ -493,10 +542,10 @@
                 "tags": [
                     "Comment"
                 ],
-                "summary": "Tạo một comment mới",
+                "summary": "Create a new comment",
                 "parameters": [
                     {
-                        "description": "Dữ liệu của comment mới",
+                        "description": "Data to create a comment",
                         "name": "comment",
                         "in": "body",
                         "required": true,
@@ -535,7 +584,7 @@
         },
         "/amg/v1/comments/delete-comment/{id}": {
             "post": {
-                "description": "Đánh dấu một comment là 'deleted'",
+                "description": "Mark a comment as deleted by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -545,7 +594,7 @@
                 "tags": [
                     "Comment"
                 ],
-                "summary": "Xóa một comment (soft delete)",
+                "summary": "Delete a comment",
                 "parameters": [
                     {
                         "type": "string",
@@ -597,7 +646,7 @@
         },
         "/amg/v1/comments/get-comments-by-post": {
             "get": {
-                "description": "Lấy tất cả comment thuộc về một postId cụ thể",
+                "description": "Get all comments for a specific post",
                 "consumes": [
                     "application/json"
                 ],
@@ -607,11 +656,11 @@
                 "tags": [
                     "Comment"
                 ],
-                "summary": "Lấy tất cả comment của một bài viết",
+                "summary": "Get comments by post-ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID của bài viết",
+                        "description": "Post ID",
                         "name": "postId",
                         "in": "query",
                         "required": true
@@ -835,7 +884,7 @@
         },
         "/amg/v1/landing-page/get-content": {
             "get": {
-                "description": "Lấy toàn bộ cấu trúc nội dung của trang landing page",
+                "description": "Get the content of the landing page",
                 "consumes": [
                     "application/json"
                 ],
@@ -843,9 +892,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "landingpage"
+                    "landing page"
                 ],
-                "summary": "Lấy nội dung landing page",
+                "summary": "Get Landing Page Content",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -877,7 +926,7 @@
         },
         "/amg/v1/landing-page/update-content": {
             "post": {
-                "description": "Cập nhật hoặc tạo mới toàn bộ nội dung của trang landing page",
+                "description": "Update the content of the landing page",
                 "consumes": [
                     "application/json"
                 ],
@@ -885,12 +934,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "landingpage"
+                    "landing page"
                 ],
-                "summary": "Cập nhật nội dung landing page",
+                "summary": "Update Landing Page Content",
                 "parameters": [
                     {
-                        "description": "Đối tượng JSON chứa toàn bộ nội dung mới",
+                        "description": "Object containing the new content for the landing page",
                         "name": "content",
                         "in": "body",
                         "required": true,
@@ -902,7 +951,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "message: Cập nhật thành công",
+                        "description": "message: \"Nội dung landing page đã được cập nhật thành công",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -1178,7 +1227,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by post status (e.g., 'published', 'draft')",
+                        "description": "Filter by post-status (e.g., 'published', 'draft')",
                         "name": "status",
                         "in": "query"
                     }
@@ -1497,7 +1546,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get all users",
+                "summary": "Get all user",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1905,7 +1954,6 @@
                     "type": "string"
                 },
                 "role": {
-                    "description": "user / admin / teacher",
                     "type": "string"
                 },
                 "update_at": {
